add lock file and remove from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -229,8 +229,7 @@ blockchain/geth/**
 blockchain/keystore/**
 blockchain/history
 
-#truffle
-yarn.lock
+# Lockfile for npm
 package-lock.json
 
 ### VisualStudioCode ###
