update ci event handling

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,12 @@ name: Unit Testing
 
 on:
   pull_request:
+    types:
+      - opened
+      - synchronize
   push:
+    branches:
+      - main
 
 jobs:
   solidity:
@@ -23,7 +28,6 @@ jobs:
       - run: yarn global add truffle
         name: Install truffle
       - run: yarn test:sol
-        name: Perform unit test 
+        name: Perform unit test
         env:
           MAX_PROPOSALS: ${{ matrix.max-proposals }}
-      
