--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "voting",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "clean": "rimraf build dist",
+    "prebuild:web": "yarn build:sol",
+    "build:sol": "truffle compile",
+    "build:web": "vue-cli-service build",
     "test:sol": "truffle test",
     "test:web": "truffle test"
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "web3": "2.0.0-alpha.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,6 +23,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "rimraf": "^3.0.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
@@ -43,13 +46,7 @@
     "not dead"
   ],
   "resolutions": {
-    "truffle/@truffle/db/**/abstract-leveldown": "*",
-    "truffle/@truffle/preserve-to-buckets/**/abort-controller": "*",
-    "truffle/@truffle/preserve-to-buckets/**/google-protobuf": "^3.2.0",
-    "truffle/@truffle/preserve-to-buckets/**/node-fetch": "*",
-    "@truffle/hdwallet-provider/**/uuid": "^7.0.0",
-    "web3/**/uuid": "^7.0.0",
-    "truffle/**/uuid": "^7.0.0",
-    "truffle/mocha/debug": "4.3.1"
-  }
+    "web3/**/uuid": "^7.0.0"
+  },
+  "version": "0.0.0"
 }
