add resolver for the @contracts

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,9 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "@contracts/*": [
+        "build/contracts/*"
       ]
     },
     "lib": [
