--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "voting",
+  "version": "0.1.0",
   "scripts": {
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
