--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     name: "Solidity Testing (Max Proposals = ${{ matrix.max-proposals }})"
     strategy:
       matrix:
-        max-proposals: [3, 4, 5]
+        max-proposals: [3, 4, 5, 6, 7, 8, 9]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
