fixed version of the ansi-regex

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   ],
   "resolutions": {
     "web3/**/uuid": "^7.0.0",
-    "@vue/cli-service/**/ansi-regex": "5.0.1"
+    "@vue/cli-service/**/ansi-regex": "5.0.1",
+    "eth-gas-reporter/**/ansi-regex": "5.0.1"
   }
 }
